<resources>
    <string name="app_name">Experiment Assistant</string>
    <string name="error_network_ask_retry"> ¿Quiere reintentar la operación?</string>
    <string name="error_network_connection">Error al conectar al servidor</string>
    <string name="default_modal_okButton">Ok</string>
    <string name="default_warning_title">Advertencia</string>
    <string name="default_info_title">Información</string>
    <string name="default_modal_cancelButton">Cancelar</string>
    <string name="default_modal_closeButton">Cerrar</string>
    <string name="default_recyclerview_emptyMessage">No hay resultados</string>
    <string name="default_button_save_title">Guardar</string>
    <string name="yes_configured">Sí</string>
    <string name="no_configured">No</string>
    <string name="location_permission_error">Ha habido un error al obtener el permiso de ubicación</string>
    <string name="remote_sync">Sincronización remota</string>
    <string name="use_default_frequency">Usar frecuencia global</string>
    <string name="button_continue">Continuar</string>
    <string name="button_finish_configuration_title">Finalizar configuración</string>
    <string name="select_sensors">Seleccionar sensores</string>
    <string name="mandatory_name_field_error">El campo nombre es obligatorio\n</string>
    <string name="at_least_one_experiment_conf_option_error">Debe seleccionar al menos una función multimedia o un sensor</string>
    <string name="quick_comments_spinner_title">Seleccione colección de comentarios rápidos</string>
    <string name="experiment_create_no_quick_comments_option">Sin comentarios rápidos</string>
    <string name="min_freq_placeholder">Min: %s</string>
    <string name="select_sensors_prompt">Seleccione sensores</string>
    <string name="experiment_data_card_title">Datos del experimento</string>
    <string name="input_name_hint">Nombre</string>
    <string name="input_description_hint">Descripción</string>
    <string name="remote_sync_card_title">Sincronización Remota</string>
    <string name="remote_sync_switch_text">Sincronización remota durante el experimento</string>
    <string name="multimedia_card_title">Multimedia</string>
    <string name="camera_switch_text">Cámara</string>
    <string name="embedding_switch_text">Obtener Embedding durante el experimento</string>
    <string name="audio_switch_text">Audio</string>
    <string name="location_card_title">Ubicación</string>
    <string name="location_switch_text">Obtener ubicación</string>
    <string name="sensors_card_title">Sensores</string>
    <string name="select_sensors_button_title">Seleccionar sensores</string>
    <string name="quick_comments_card_title">Comentarios rápidos</string>
    <string name="add_new_quick_comments_button_text">Añadir nueva colección de comentarios rápidos</string>
    <string name="experiment_configuration_dialog_end_title">Finalización de configuración</string>
    <string name="experiment_configuration_dialog_end_text">Su experimento se va a registrar en la aplicación, ¿cuándo desea iniciarlo?</string>
    <string name="now_button">Ahora mismo</string>
    <string name="later_button">Más tarde</string>
    <string name="not_configured_functionality_text">Este experimento no tiene habilitada esta funcionalidad</string>
    <string name="camera_frequency_configuration_content_description">Configurar frecuencia de actualización de cámara</string>
    <string name="camera_frequency_configuration_embedding_alg_title">Embedding:</string>
    <string name="camera_position_configuration_content_description">Posición de la cámara</string>
    <string name="camera_flashmode_configuration_content_description">Modo de flash de la cámara</string>
    <string name="camera_settings_configuration_content_description">Configurar las propiedades de la cámara</string>
    <string name="audio_frequency_configuration_content_description">Configurar frecuencia de inicio de grabación de audio</string>
    <string name="audio_duration_configuration_content_description">Configurar duración de grabaciones de audio</string>
    <string name="audio_settings_configuration_content_description">Configurar las propiedades de la grabación de audio</string>
    <string name="global_frequency_text">Frecuencia global</string>
    <string name="min_delay">Delay mínimo</string>
    <string name="max_delay">Delay máximo</string>
    <string name="configure_frequency_title">Configurar Frecuencia:\n%s</string>
    <string name="configure_duration">Configurar Duración:\n%s</string>
    <string name="content_description_slider_to_select_frequency">Mueva el slider para seleccionar una frecuencia</string>
    <string name="global_frequency_literal">Global</string>
    <string name="global_frequency_configuration_content_description">Configurar frecuencia global para sensores</string>
    <string name="location_frequency_configuration_content_description">Configurar frecuencia de registro de ubicación</string>
    <string name="remote_sync_frequency_configuration_content_description">Configurar frecuencia de registro de elementos en servidor remoto</string>
    <string name="embedding_alg_spinner_title">Seleccione modelo</string>
    <string name="camera_configuration_title">Configuración de cámara</string>
    <string name="camera_configuration_flash_and_position_title">Configuración de Flash y posición de la cámara</string>
    <string name="flash_selector_button_content_description">Selección de flash</string>
    <string name="camera_selector_button_content_description">Selección de cámara</string>
    <string name="camera_configuration_embedding_title">Configuración de modelo de embedding</string>
    <string name="experiment_perform_error">Error al iniciar el experimento</string>
    <string name="perform_experiment_init_text">Iniciar</string>
    <string name="perform_experiment_finish_text">Finalizar</string>
    <string name="default_succesful_operation">Operación realizada con éxito</string>
    <string name="default_failure_operation">Su operación no pudo realizarse</string>
    <string name="default_error_database_register_entity">Se ha producido un error en el registro de datos</string>
    <string name="experiment_perform_resume_dialog_num_images"><![CDATA[Número de imágenes registradas: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_dialog_num_embedded"><![CDATA[Número de imágenes analizadas en remoto: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_dialog_num_audios"><![CDATA[Número de archivos de audio registrados: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_dialog_num_sensors"><![CDATA[Número de lecturas de sensor registradas: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_dialog_num_locations"><![CDATA[Número de posiciones de ubicación registradas: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_dialog_num_comments"><![CDATA[Número de comentarios registrados: <b>%d</b><br>]]></string>
    <string name="experiment_perform_resume_pending_sync"><![CDATA[<b>El experimento tiene registros pendientes de sincronizar</b><br>]]></string>
    <string name="experiment_perform_resume_complete_sync"><![CDATA[<b>El experimento ha sincronizado correctamente todos sus registros</b><br>]]></string>
    <string name="experiment_perform_images_title">Imágenes</string>
    <string name="experiment_perform_images_number">Nº de imágenes</string>
    <string name="experiment_perform_num_embeddings">Nº de vectores de embedding</string>
    <string name="experiment_perform_comments_title">Introducir comentario</string>
    <string name="experiment_perform_quick_comments_title">Comentarios rápidos</string>
    <string name="experiment_perform_add_comment_button">Añadir comentario</string>
    <string name="experiment_perform_add_and_save_comment_button">Añadir comentario y guardar en sugerencias</string>
    <string name="experiment_perform_num_comments">Nº comentarios</string>
    <string name="experiment_perform_audio_title">Audio</string>
    <string name="experiment_perform_num_audios">Nº de archivos de audio</string>
    <string name="experiment_perform_sensors_title">Sensores</string>
    <string name="experiment_perform_num_sensors">Nº de mediciones de sensor registradas</string>
    <string name="experiment_perform_location_title">Ubicación</string>
    <string name="experiment_perform_num_locations">Nº de ubicaciones obtenidas</string>
    <string name="experiment_perform_location_format"><![CDATA[Latitud: %f, Longitud %f, Altitud: %f, Precisión: %f ]]></string>
    <string name="pending_jobs_dialog_title">Trabajos pendientes</string>
    <string name="pending_jobs_dialog_text">Hay trabajos pendientes en segundo plano, ¿Que desea hacer con ellos?</string>
    <string name="pending_jobs_dialog_option_end">Finalizarlos y salvar el experimento</string>
    <string name="pending_jobs_dialog_option_wait">Esperar hasta terminarlos</string>
    <string name="pending_jobs_dialog_option_wait_only_local">Finalizar trabajos pendientes que requieren de servidor y esperar al resto</string>
    <string name="audio_configuration_title">Configuración de grabación de audio</string>
    <string name="audio_option_spinner_title">Seleccione formato de audio</string>
    <string name="audio_bitrate_spinner_title">Seleccione bitrate</string>
    <string name="audio_configuration_audio_option_title">Configuración de encoder de audio</string>
    <string name="audio_configuration_audio_bitrate_title">Configuración de Bitrate</string>
    <string name="camera_enabled_content_description">Tiene imágenes</string>
    <string name="audio_enabled_content_description">Tiene sonidos</string>
    <string name="embedding_enabled_content_description">Tiene embedding de imágenes</string>
    <string name="location_enabled_content_description">Tiene ubicación</string>
    <string name="sensors_enabled_content_description">Tiene sensores</string>
    <string name="sync_enabled_content_description">Tiene sincronización</string>
    <string name="about_text">Esta aplicación nace con el propósito de utilizar un dispositivo móvil Android como una herramienta que permita la captación, registro y exportación de datos que puedan ser usados en la realización de experimentos.\nEsta aplicación se basa en la App \"Aplicación móvil de registro de datos de sensores durante la realización de actividades\" creada por Adrián Jiménez Calzada.\nAplicación desarrollada como Trabajo Fin de Máster para el Máster en Ingeniería Informática de la Universidad Pablo de Olavide.\nJunio 2022</string>
    <string name="about_developed_by">Desarrollada por</string>
    <string name="about_developer">Joaquín Sainz de la Maza Padró</string>
    <string name="about_tutored_by">Tutelada por</string>
    <string name="about_tutor">Gualberto Asencio Cortés</string>
    <string name="experiment_actions_sync_text">Sincronizar datos</string>
    <string name="status_filter_text">Estado</string>
    <string name="condition_filter_text">Condición</string>
    <string name="pending_elements_card_title">Elementos pendientes</string>
    <string name="embedding">Embedding</string>
    <string name="sync_events_log">Log de eventos</string>
    <string name="camera_icon_content_description">Tiene imágenes</string>
    <string name="audio_icon_content_description">Tiene sonidos</string>
    <string name="embedding_icon_content_description">Tiene embedding de imágenes</string>
    <string name="sensor_icon_content_description">Tiene sensores</string>
    <string name="sync_icon_content_description">Tiene sincronización remota</string>
    <string name="pending_sync_icon_content_description">Tiene Sincronización remota pendiente</string>
    <string name="pending_remote_sync">Elementos pendientes de sincronizar</string>
    <string name="dialog_legend_title">Información de los iconos del listado</string>
</resources>