<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/frequencyTV"
        style="@style/BaseCardTitleItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_legend_title"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagesIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/camera_icon_content_description"
                app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/soundsIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/audio_icon_content_description"
                app:srcCompat="@android:drawable/presence_audio_away" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/audio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/embeddingIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/embedding_icon_content_description"
                app:srcCompat="@drawable/ic_baseline_photo_size_select_large_24" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/embedding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sensorsIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/sensor_icon_content_description"
                app:srcCompat="@drawable/ic_baseline_edgesensor_high_24" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/sensors" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/locationIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/location_enabled_content_description"
                app:srcCompat="@drawable/ic_baseline_location_24" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/syncIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/sync_icon_content_description"
                app:srcCompat="@drawable/ic_baseline_cloud_sync_24" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/remote_sync" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/syncPendingIV"
                style="@style/BaseIcon"
                android:contentDescription="@string/pending_sync_icon_content_description"
                app:srcCompat="@drawable/ic_baseline_sync_problem_24"
                app:tint="@color/warnColor" />

            <TextView
                style="@style/LinearGravityNoWidthLeftTextView"
                android:text="@string/pending_remote_sync" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>