<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.jsm.exptool.ui.experiments.create.audioconfiguration.ExperimentAudioConfigurationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:text="@string/audio_configuration_title"
                style="@style/BaseSubtitleTextView" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/recordingOptionConfigurationCard"
            style="@style/BaseCardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/BaseCardTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_configuration_audio_option_title" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/encoderSpinner"
                style="@style/BaseSpinner"
                android:prompt="@string/audio_option_spinner_title"
                android:entries="@{viewModel.audioOptions}"
                app:spinnerAdapter="@{ viewModel.getAudioOptionsAdapter(context)}"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.onSelectedAudioOption(position)}"
                android:selectedItemPosition="@{ viewModel.selectedAudioOptionPosition}"
                tools:listitem="@layout/generic_title_description_spinner_list_item" />
<!--                            app:selectedValue="@={viewModel.selectedAudioOption}"
-->
            <TextView
                style="@style/BaseCardTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_configuration_audio_bitrate_title" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/bitRateSpinner"
                style="@style/BaseSpinner"
                android:prompt="@string/audio_bitrate_spinner_title"
                android:entries="@{viewModel.bitrateOptions}"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.onBitrateSelected(position)}"
                app:spinnerAdapter="@{ viewModel.getBitRateAdapter(context)}"
                android:selectedItemPosition="@{ viewModel.selectedBitratePosition}"
                tools:listitem="@layout/generic_title_description_spinner_list_item" />


        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                style="@style/FullWidthButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> viewModel.saveData(context)}"
                android:text="@string/default_button_save_title" />

        </LinearLayout>

    </RelativeLayout>
</layout>